<resources>
    <!--    LanguageActivity中的字符串资源-->
    <string name="app_name">UI测试</string>
    <string name="english">英文识别</string>
    <string name="chinese">中文识别</string>
    <string name="select_language">选择识别语言</string>

    <!--    SerialActivity中的字符串资源-->
    <string name="hint_serial_port_list">请选择对应的串口</string>
    <string name="ocr_start">开启识别</string>
    <string name="force_start">强行进入</string>
    <string name="refresh_device_list">刷新列表</string>
    <string name="touch_connect">笔已选择</string>
    <string name="touch_not_connect">笔未选择</string>
    <string name="other_connect">键已选择</string>
    <string name="other_not_connect">键未选择</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--    CameraActivity中的字符串资源-->
    <string name="stop">停止</string>
    <string name="start">开始</string>
    <string name="set_default_coordination">设为原点</string>
    <string name="return_to_origin">返回原点</string>
    <string name="select_mode">请选择工作模式</string>
    <string name="camera_front">前置摄像</string>
    <string name="camera_back">后置摄像</string>
    <string name="test">测试返回值</string>
    <string name="x_test_p">测试X正向</string>
    <string name="x_test_n">测试X负向</string>
</resources>
