<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A4A0275B"
    tools:context=".activity.LanguageActivity">


    <Button
        android:id="@+id/englishOcr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_press"
        android:text="@string/english"
        android:textColor="#A22929"
        app:layout_constraintBottom_toTopOf="@+id/chineseOcr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/chineseOcr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_press"
        android:text="@string/chinese"
        android:textColor="#ED1162DB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/englishOcr"
        app:layout_constraintStart_toStartOf="@+id/englishOcr"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/selectLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/select_language"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/englishOcr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>